# forex-bot

./: Cargo.toml
src/: bias.rs  candle.rs  candle_buffer.rs  candle_builder.rs  entry_state.rs  execution.rs  filters.rs  main.rs  market.rs  market_deriv.rs  mtf_engine.rs  multi_tf_candles.rs  price_buffer.rs  risk_manager.rs  signal.rs  smc.rs  state.rs  strategy.rs  strategy_engine.rs  structure.rs  structure_state.rs  tick.rs  timeframe.rs  trend_filter.rs
src/strategies/: mod.rs  sma.rs  structure.rs
