[package]
name = "forex-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio ={ version = "1", features = ["full"]}
reqwest ={ version = "0.12", features = ["json"]}
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio-tungstenite = { version = "0.29", features = ["native-tls"] }
futures-util = "0.3.32"
